variation menu & main

--- a/index.html
+++ b/index.html
@@ -19,10 +19,15 @@
   </head>
   <body>
     <!-- ? ............... MAIN ...................... -->
-    <header class="main">
+    <div class="main">
       <div class="container">
-        <div class="main__block left">
+        <div class="main__header">
+          <hr>
           <img class="main__block--img" src="./img/logo.png" alt="Caprese" />
+          <hr>
+        </div>
+        <div class="main__block left">          
+          <!-- <img class="main__block--img" src="./img/logo.png" alt="Caprese" /> -->
           <p class="main__block--text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Error culpa
             cum deleniti dolorem blanditiis, ipsa distinctio fugiat optio
@@ -31,10 +36,10 @@
           </p>
         </div>
         <div class="main__block right">
-          <img src="./img/main-cooker-update.png" alt="" />
+          <img src="./img/main__man.png" alt="" />
         </div>
       </div>
-    </header>
+    </div>
     <!-- ? ............... NAVIGATION ................ -->
     <section class="nav">
       <div class="container">
@@ -1271,7 +1276,298 @@
           <img class="kitchen__man" src="./img/snacks__man.jpg" alt="">     
         </div> 
         <!-- ? .................. HOT .............. -->
-        
+        <div class="container">        
+          <img class="kitchen__man" src="./img/hot__man.jpg" alt="">      
+          <div class="kitchen__wrapper">
+            <h2 class="kitchen__wrapper--title">Горячие блюда</h2>
+          <div class="kitchen__wrapper--item item">
+            <div class="item__text">
+              <h3 class="item__text__name">Салат Оливье</h3>
+              <p class="item__text--info">
+                Ветчина, огурец, морковь, картофель, горошек, майонез, зелень
+              </p>
+            </div>
+            <span class="item__gramm">150 г.</span>
+            <span class="item__cost">3,50 BYN</span>
+          </div>
+          <div class="kitchen__wrapper--item item">
+            <div class="item__text">
+              <h3 class="item__text__name">Салат Фермерская</h3>
+              <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+            </div>
+            <span class="item__gramm">150 г.</span>
+            <span class="item__cost">3,20 BYN</span>
+          </div>
+          <div class="kitchen__wrapper--item item">
+            <div class="item__text">
+              <h3 class="item__text__name">Салат Фермерская</h3>
+              <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+            </div>
+            <span class="item__gramm">150 г.</span>
+            <span class="item__cost">3,20 BYN</span>
+          </div>
+          <div class="kitchen__wrapper--item item">
+            <div class="item__text">
+              <h3 class="item__text__name">Салат Фермерская</h3>
+              <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+            </div>
+            <span class="item__gramm">150 г.</span>
+            <span class="item__cost">3,20 BYN</span>
+          </div>
+          <div class="kitchen__wrapper--item item">
+            <div class="item__text">
+              <h3 class="item__text__name">Салат Фермерская</h3>
+              <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+            </div>
+            <span class="item__gramm">150 г.</span>
+            <span class="item__cost">3,20 BYN</span>
+          </div>
+          <div class="kitchen__wrapper--item item">
+            <div class="item__text">
+              <h3 class="item__text__name">Салат Фермерская</h3>
+              <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+            </div>
+            <span class="item__gramm">150 г.</span>
+            <span class="item__cost">3,20 BYN</span>
+          </div>
+          <div class="kitchen__wrapper--item item">
+            <div class="item__text">
+              <h3 class="item__text__name">Салат Фермерская</h3>
+              <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+            </div>
+            <span class="item__gramm">150 г.</span>
+            <span class="item__cost">3,20 BYN</span>
+          </div>
+          <div class="kitchen__wrapper--item item">
+            <div class="item__text">
+              <h3 class="item__text__name">Салат Фермерская</h3>
+              <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+            </div>
+            <span class="item__gramm">150 г.</span>
+            <span class="item__cost">3,20 BYN</span>
+          </div>
+        </div>
+        <!-- ? ............ ДЕСЕРТЫ .................... -->
+        <div class="container">
+          <div class="kitchen__wrapper">
+            <h2 class="kitchen__wrapper--title">Десерты</h2>
+          <div class="kitchen__wrapper--item item">
+            <div class="item__text">
+              <h3 class="item__text__name">Салат Оливье</h3>
+              <p class="item__text--info">
+                Ветчина, огурец, морковь, картофель, горошек, майонез, зелень
+              </p>
+            </div>
+            <span class="item__gramm">150 г.</span>
+            <span class="item__cost">3,50 BYN</span>
+          </div>
+          <div class="kitchen__wrapper--item item">
+            <div class="item__text">
+              <h3 class="item__text__name">Салат Фермерская</h3>
+              <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+            </div>
+            <span class="item__gramm">150 г.</span>
+            <span class="item__cost">3,20 BYN</span>
+          </div>
+          <div class="kitchen__wrapper--item item">
+            <div class="item__text">
+              <h3 class="item__text__name">Салат Фермерская</h3>
+              <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+            </div>
+            <span class="item__gramm">150 г.</span>
+            <span class="item__cost">3,20 BYN</span>
+          </div>
+          <div class="kitchen__wrapper--item item">
+            <div class="item__text">
+              <h3 class="item__text__name">Салат Фермерская</h3>
+              <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+            </div>
+            <span class="item__gramm">150 г.</span>
+            <span class="item__cost">3,20 BYN</span>
+          </div>
+          <div class="kitchen__wrapper--item item">
+            <div class="item__text">
+              <h3 class="item__text__name">Салат Фермерская</h3>
+              <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+            </div>
+            <span class="item__gramm">150 г.</span>
+            <span class="item__cost">3,20 BYN</span>
+          </div>
+          <div class="kitchen__wrapper--item item">
+            <div class="item__text">
+              <h3 class="item__text__name">Салат Фермерская</h3>
+              <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+            </div>
+            <span class="item__gramm">150 г.</span>
+            <span class="item__cost">3,20 BYN</span>
+          </div>
+          <div class="kitchen__wrapper--item item">
+            <div class="item__text">
+              <h3 class="item__text__name">Салат Фермерская</h3>
+              <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+            </div>
+            <span class="item__gramm">150 г.</span>
+            <span class="item__cost">3,20 BYN</span>
+          </div>
+          <div class="kitchen__wrapper--item item">
+            <div class="item__text">
+              <h3 class="item__text__name">Салат Фермерская</h3>
+              <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+            </div>
+            <span class="item__gramm">150 г.</span>
+            <span class="item__cost">3,20 BYN</span>
+          </div> 
+          </div>             
+          <img class="kitchen__man" src="./img/desert_man.jpg" alt="">     
+        </div> 
+        <!-- ? .............. НАПИТКИ .................. -->
+        <div class="category" id="drinks">
+          <hr class="category__line" />
+          <h1 class="category__title">
+            <i class="fa fa-solid fa-martini-glass-citrus"></i> 
+            Напитки</h1>
+          <hr class="category__line" />
+        </div>
+        <div class="kitchen__wrapper kitchen__drinks">
+          <h2 class="kitchen__wrapper--title">Безалкогольные</h2>
+        <div class="kitchen__wrapper--item item">
+          <div class="item__text">
+            <h3 class="item__text__name">Салат Оливье</h3>
+            <p class="item__text--info">
+              Ветчина, огурец, морковь, картофель, горошек, майонез, зелень
+            </p>
+          </div>
+          <span class="item__gramm">150 г.</span>
+          <span class="item__cost">3,50 BYN</span>
+        </div>
+        <div class="kitchen__wrapper--item item">
+          <div class="item__text">
+            <h3 class="item__text__name">Салат Фермерская</h3>
+            <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+          </div>
+          <span class="item__gramm">150 г.</span>
+          <span class="item__cost">3,20 BYN</span>
+        </div>
+        <div class="kitchen__wrapper--item item">
+          <div class="item__text">
+            <h3 class="item__text__name">Салат Фермерская</h3>
+            <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+          </div>
+          <span class="item__gramm">150 г.</span>
+          <span class="item__cost">3,20 BYN</span>
+        </div>
+        <div class="kitchen__wrapper--item item">
+          <div class="item__text">
+            <h3 class="item__text__name">Салат Фермерская</h3>
+            <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+          </div>
+          <span class="item__gramm">150 г.</span>
+          <span class="item__cost">3,20 BYN</span>
+        </div>
+        <div class="kitchen__wrapper--item item">
+          <div class="item__text">
+            <h3 class="item__text__name">Салат Фермерская</h3>
+            <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+          </div>
+          <span class="item__gramm">150 г.</span>
+          <span class="item__cost">3,20 BYN</span>
+        </div>
+        <div class="kitchen__wrapper--item item">
+          <div class="item__text">
+            <h3 class="item__text__name">Салат Фермерская</h3>
+            <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+          </div>
+          <span class="item__gramm">150 г.</span>
+          <span class="item__cost">3,20 BYN</span>
+        </div>
+        <div class="kitchen__wrapper--item item">
+          <div class="item__text">
+            <h3 class="item__text__name">Салат Фермерская</h3>
+            <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+          </div>
+          <span class="item__gramm">150 г.</span>
+          <span class="item__cost">3,20 BYN</span>
+        </div>
+        <div class="kitchen__wrapper--item item">
+          <div class="item__text">
+            <h3 class="item__text__name">Салат Фермерская</h3>
+            <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+          </div>
+          <span class="item__gramm">150 г.</span>
+          <span class="item__cost">3,20 BYN</span>
+        </div> 
+        </div>
+        <img class="kitchen__man kitchen__drinks--img" src="./img/barmen_men.jpg" alt=""> 
+        <!-- ? ................... АЛКАГОЛЬ ....................... -->
+        <div class="kitchen__wrapper kitchen__drinks alcogol">
+          <h2 class="kitchen__wrapper--title">Алкаголь</h2>
+        <div class="kitchen__wrapper--item item">
+          <div class="item__text">
+            <h3 class="item__text__name">Салат Оливье</h3>
+            <p class="item__text--info">
+              Ветчина, огурец, морковь, картофель, горошек, майонез, зелень
+            </p>
+          </div>
+          <span class="item__gramm">150 г.</span>
+          <span class="item__cost">3,50 BYN</span>
+        </div>
+        <div class="kitchen__wrapper--item item">
+          <div class="item__text">
+            <h3 class="item__text__name">Салат Фермерская</h3>
+            <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+          </div>
+          <span class="item__gramm">150 г.</span>
+          <span class="item__cost">3,20 BYN</span>
+        </div>
+        <div class="kitchen__wrapper--item item">
+          <div class="item__text">
+            <h3 class="item__text__name">Салат Фермерская</h3>
+            <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+          </div>
+          <span class="item__gramm">150 г.</span>
+          <span class="item__cost">3,20 BYN</span>
+        </div>
+        <div class="kitchen__wrapper--item item">
+          <div class="item__text">
+            <h3 class="item__text__name">Салат Фермерская</h3>
+            <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+          </div>
+          <span class="item__gramm">150 г.</span>
+          <span class="item__cost">3,20 BYN</span>
+        </div>
+        <div class="kitchen__wrapper--item item">
+          <div class="item__text">
+            <h3 class="item__text__name">Салат Фермерская</h3>
+            <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+          </div>
+          <span class="item__gramm">150 г.</span>
+          <span class="item__cost">3,20 BYN</span>
+        </div>
+        <div class="kitchen__wrapper--item item">
+          <div class="item__text">
+            <h3 class="item__text__name">Салат Фермерская</h3>
+            <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+          </div>
+          <span class="item__gramm">150 г.</span>
+          <span class="item__cost">3,20 BYN</span>
+        </div>
+        <div class="kitchen__wrapper--item item">
+          <div class="item__text">
+            <h3 class="item__text__name">Салат Фермерская</h3>
+            <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+          </div>
+          <span class="item__gramm">150 г.</span>
+          <span class="item__cost">3,20 BYN</span>
+        </div>
+        <div class="kitchen__wrapper--item item">
+          <div class="item__text">
+            <h3 class="item__text__name">Салат Фермерская</h3>
+            <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+          </div>
+          <span class="item__gramm">150 г.</span>
+          <span class="item__cost">3,20 BYN</span>
+        </div> 
+        </div>
     </section>
     <script src="./js/scirpts.js"></script>
   </body>
