--- a/index.html
+++ b/index.html
@@ -18,26 +18,10 @@
     <title>Кафе Caprese</title>
   </head>
   <body>
-    <!-- ? ............... MAIN ...................... -->
+    <!-- ! ............... MAIN ...................... -->
     <div class="main">
-      <div class="container">
-        <div class="main__header">
-          <hr>
-          <img class="main__block--img" src="./img/logo.png" alt="Caprese" />
-          <hr>
-        </div>
-        <div class="main__block left">          
-          <!-- <img class="main__block--img" src="./img/logo.png" alt="Caprese" /> -->
-          <p class="main__block--text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Error culpa
-            cum deleniti dolorem blanditiis, ipsa distinctio fugiat optio
-            explicabo velit quaerat exercitationem labore aliquam ullam
-            quisquam?
-          </p>
-        </div>
-        <div class="main__block right">
-          <img src="./img/main__man.png" alt="" />
-        </div>
+      <div class="container">        
+        <img class="main__logo" src="./img/logo.png" alt="Caprese" />
       </div>
     </div>
     <!-- ? ............... NAVIGATION ................ -->
