--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
     />
     <link href="./css/main.css" rel="stylesheet" />
     <link rel="shortcut icon" href="./img/logo__little.png" type="image/png" />
-    <title>Кафе Caprese</title>
+    <title> Кафе Caprese</title>
   </head>
   <body>
     <!-- ! ............... MAIN ...................... -->
     <div class="main">
       <div class="container">        
         <img class="main__logo" src="./img/logo.png" alt="Caprese" />
+        <div class="slider">
+          
+        </div>
       </div>
     </div>
     <!-- ? ............... NAVIGATION ................ -->
@@ -1377,85 +1380,85 @@
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Кола, Фанта, Спрайт</h3>
             <span class="item__gramm">500</span>
-            <span class="item__cost">3,00</span>
+            <!-- <span class="item__cost">3,00</span> -->
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Бонаква</h3>
             <span class="item__gramm">500 </span>
-            <span class="item__cost">2,00 </span>
+            <!-- <span class="item__cost">2,00 </span> -->
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Слки RICH</h3>
             <span class="item__gramm">250</span>
-            <span class="item__cost">2,00</span>
+            <!-- <span class="item__cost">2,00</span> -->
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Кола, Фанта, Спрайт</h3>
             <span class="item__gramm">500</span>
-            <span class="item__cost">3,00</span>
+            <!-- <span class="item__cost">3,00</span> -->
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Бонаква</h3>
             <span class="item__gramm">500 </span>
-            <span class="item__cost">2,00 </span>
+            <!-- <span class="item__cost">2,00 </span> -->
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Слки RICH</h3>
             <span class="item__gramm">250</span>
-            <span class="item__cost">2,00</span>
+            <!-- <span class="item__cost">2,00</span> -->
           </div>
           <!-- * ............ Вино ............... -->
           <h2 class="kitchen__wrapper--title">Вино</h2>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Эспрессо</h3>
             <span class="item__gramm">50</span>
-            <span class="item__cost">2,80</span>
+            <!-- <span class="item__cost">2,80</span> -->
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Американо</h3>
             <span class="item__gramm">120</span>
-            <span class="item__cost">2,80</span>
+            <!-- <span class="item__cost">2,80</span> -->
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Капучино</h3>
             <span class="item__gramm">120</span>
-            <span class="item__cost">4,00</span>
+            <!-- <span class="item__cost">4,00</span> -->
           </div>
           <!-- * ................ Водка ............... -->
           <h2 class="kitchen__wrapper--title">Водка</h2>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Черный лмстовой</h3>
             <span class="item__gramm">50</span>
-            <span class="item__cost">2,80</span>
+            <!-- <span class="item__cost">2,80</span> -->
           </div>
           <!-- * ................ Настойки ............... -->
           <h2 class="kitchen__wrapper--title">Настойки</h2>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Эспрессо</h3>
             <span class="item__gramm">50</span>
-            <span class="item__cost">2,80</span>
+            <!-- <span class="item__cost">2,80</span> -->
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Американо</h3>
             <span class="item__gramm">120</span>
-            <span class="item__cost">2,80</span>
+            <!-- <span class="item__cost">2,80</span> -->
           </div>
           <!-- * ................ Коньяк ................. -->
           <h2 class="kitchen__wrapper--title">Коньяк</h2>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Эспрессо</h3>
             <span class="item__gramm">50</span>
-            <span class="item__cost">2,80</span>
+            <!-- <span class="item__cost">2,80</span> -->
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Американо</h3>
             <span class="item__gramm">120</span>
-            <span class="item__cost">2,80</span>
+            <!-- <span class="item__cost">2,80</span> -->
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Капучино</h3>
             <span class="item__gramm">120</span>
-            <span class="item__cost">4,00</span>
+            <!-- <span class="item__cost">4,00</span> -->
           </div>
         </div>
         <img class="kitchen__man kitchen__drinks--img" src="./img/barmen_men.jpg" alt=""> 
