--- a/index.html
+++ b/index.html
@@ -784,123 +784,49 @@
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">Салат Оливье</h3>
+              <h3 class="item__text__name">Биф бургер</h3>
               <p class="item__text--info">
-                Ветчина, огурец, морковь, картофель, горошек, майонез, зелень
-              </p>
-            </div>
-            <span class="item__gramm">150  </span>
-            <span class="item__cost">3,50  </span>
-          </div>
-          <div class="lanch__wrapper--item item">
-            <div class="item__text">
-              <h3 class="item__text__name">Салат Оливье</h3>
-              <p class="item__text--info">
-                Ветчина, огурец, морковь, картофель, горошек, майонез, зелень
-              </p>
-            </div>
-            <span class="item__gramm">150  </span>
-            <span class="item__cost">3,50  </span>
-          </div>
-          <div class="lanch__wrapper--item item">
-            <div class="item__text">
-              <h3 class="item__text__name">Салат Оливье</h3>
-              <p class="item__text--info">
-                Ветчина, огурец, морковь, картофель, горошек, майонез, зелень
-              </p>
-            </div>
-            <span class="item__gramm">150  </span>
-            <span class="item__cost">3,50  </span>
-          </div>
-          <div class="lanch__wrapper--item item">
-            <div class="item__text">
-              <h3 class="item__text__name">Салат Оливье</h3>
-              <p class="item__text--info">
-                Ветчина, огурец, морковь, картофель, горошек, майонез, зелень
-              </p>
-            </div>
-            <span class="item__gramm">150  </span>
-            <span class="item__cost">3,50  </span>
-          </div>
-        </div>
-        <!-- <div class="category">
-          <hr class="category__line" />
-          <h1 class="category__title">
-            <i class="fa-solid fa-burger"></i> Burger</h1>
-          <hr class="category__line" />
-        </div>
-        <div class="burger__box box">
-          <div class="box__wrapper">
-            <img
-              src="./img/big_burger.png"
-              alt="pizza"
-              class="box__wrapper--img"
-            />
-            <h3 class="box__wrapper--title">Биф бургер</h3>
-            <p class="box__wrapper--text">
-              Котлета говяжья, лук маринованный, огурец консервированный, сыр
+                Котлета говяжья, лук маринованный, огурец консервированный, сыр
               Чеддер, соус Барбекю
-            </p>
+              </p>
+            </div>
+            <span class="item__gramm">360  </span>
+            <span class="item__cost">13,00  </span>
           </div>
-          <div class="box__numbers">
-            <span class="box__numbers--cost">13 BYN</span>
-            <span>360 г.</span>
-          </div>
-        </div>
-        <div class="burger__box box">
-          <div class="box__wrapper">
-            <img
-              src="./img/cesar_burger.png"
-              alt="pizza"
-              class="box__wrapper--img"
-            />
-            <h3 class="box__wrapper--title">Цезарь бургер</h3>
-            <p class="box__wrapper--text">
-              Филе куриное, Айсберг, яйцо, огурец свежий, томат, сыр Чеддер,
+          <div class="lanch__wrapper--item item">
+            <div class="item__text">
+              <h3 class="item__text__name">Цезарь бургер</h3>
+              <p class="item__text--info">
+                Филе куриное, Айсберг, яйцо, огурец свежий, томат, сыр Чеддер,
               соус Цезарь
-            </p>
+              </p>
+            </div>
+            <span class="item__gramm">330  </span>
+            <span class="item__cost">11,00  </span>
           </div>
-          <div class="box__numbers">
-            <span class="box__numbers--cost">11 BYN</span>
-            <span>330 г.</span>
-          </div>
-        </div>
-        <div class="burger__box box">
-          <div class="box__wrapper">
-            <img
-              src="./img/chiken_burger.png"
-              alt="pizza"
-              class="box__wrapper--img"
-            />
-            <h3 class="box__wrapper--title">Чикен бургер</h3>
-            <p class="box__wrapper--text">
-              Котлета куриная, томат, огуец маринованный, соус Цезарь, сыр
+          <div class="lanch__wrapper--item item">
+            <div class="item__text">
+              <h3 class="item__text__name">Чикен бургер</h3>
+              <p class="item__text--info">
+                Котлета куриная, томат, огуец маринованный, соус Цезарь, сыр
               Чеддер
-            </p>
+              </p>
+            </div>
+            <span class="item__gramm">300  </span>
+            <span class="item__cost">10,50  </span>
           </div>
-          <div class="box__numbers">
-            <span class="box__numbers--cost">10,5 BYN</span>
-            <span>300 г.</span>
+          <div class="lanch__wrapper--item item">
+            <div class="item__text">
+              <h3 class="item__text__name">Бургер со свининой и беконом</h3>
+              <p class="item__text--info">
+                Котлета из свинины, огурец маринованный, томат, грудинка,
+              Горчичный соус, сыр Чеддер
+              </p>
+            </div>
+            <span class="item__gramm">360  </span>
+            <span class="item__cost">12,00  </span>
           </div>
         </div>
-        <div class="burger__box box">
-          <div class="box__wrapper">
-            <img
-              src="./img/pig_burger.png"
-              alt="pizza"
-              class="box__wrapper--img"
-            />
-            <h3 class="box__wrapper--title">Бургер со свининой и беконом</h3>
-            <p class="box__wrapper--text">
-              Котлета из свинины, огурец маринованный, томат, грудинка,
-              Горчичный соус, сыр Чеддер
-            </p>
-          </div>
-          <div class="box__numbers">
-            <span class="box__numbers--cost">12 BYN</span>
-            <span>360 г.</span>
-          </div>
-        </div> -->
       </div>
       </div>
     </section>
@@ -1344,7 +1270,7 @@
         </div>
       </div>
         <!-- ?............... Салаты .................. -->        
-      <div class="container">
+      <div class="container container__revrse">
         <div class="kitchen__wrapper">
           <h2 class="kitchen__wrapper--title">Салаты</h2>
         <div class="kitchen__wrapper--item item">
@@ -1484,31 +1410,31 @@
       <!-- ? ............ ДЕСЕРТЫ .................... -->
       <div class="container">
         <div class="kitchen__wrapper">                    
-        <h2 class="kitchen__wrapper--title">Гарниры</h2>
-        <div class="kitchen__wrapper--item item">
-          <div class="item__text">
-            <h3 class="item__text__name">Драники со сметаной</h3>
-            <p class="item__text--info">Картофельные оладьи, сметана, зелень</p>
+          <h2 class="kitchen__wrapper--title">Гарниры</h2>
+          <div class="kitchen__wrapper--item item">
+            <div class="item__text">
+              <h3 class="item__text__name">Драники со сметаной</h3>
+              <p class="item__text--info">Картофельные оладьи, сметана, зелень</p>
+            </div>
+            <span class="item__gramm">390  </span>
+            <span class="item__cost">8,5  </span>
           </div>
-          <span class="item__gramm">390  </span>
-          <span class="item__cost">8,5  </span>
-        </div>
-        <div class="kitchen__wrapper--item item">
-          <div class="item__text">
-            <h3 class="item__text__name">Драники с птицей и чесночным соусом</h3>
-            <p class="item__text--info">Картофельные оладьи, филе куриное, чесночный соус, зелень</p>
+          <div class="kitchen__wrapper--item item">
+            <div class="item__text">
+              <h3 class="item__text__name">Драники с птицей и чесночным соусом</h3>
+              <p class="item__text--info">Картофельные оладьи, филе куриное, чесночный соус, зелень</p>
+            </div>
+            <span class="item__gramm">380  </span>
+            <span class="item__cost">3,20  </span>
           </div>
-          <span class="item__gramm">380  </span>
-          <span class="item__cost">3,20  </span>
-        </div>
-        <div class="kitchen__wrapper--item item">
-          <div class="item__text">
-            <h3 class="item__text__name">Драники по-домашнему</h3>
-            <p class="item__text--info">Картофельные оладьи, филе куриное, ветчина, грудинка, шампиньоны, лук, сливки, сметана</p>
-          </div>
-          <span class="item__gramm">460  </span>
-          <span class="item__cost">16,00  </span>
-        </div>          
+          <div class="kitchen__wrapper--item item">
+            <div class="item__text">
+              <h3 class="item__text__name">Драники по-домашнему</h3>
+              <p class="item__text--info">Картофельные оладьи, филе куриное, ветчина, грудинка, шампиньоны, лук, сливки, сметана</p>
+            </div>
+            <span class="item__gramm">460  </span>
+            <span class="item__cost">16,00  </span>
+          </div>          
           <h2 class="kitchen__wrapper--title">Десерты</h2>
           <div class="kitchen__wrapper--item item">
             <div class="item__text">
