--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta charset="UTF-8" />    
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -12,8 +12,12 @@
       rel="stylesheet"
     />
     <link href="./css/main.css" rel="stylesheet" />
-    <link rel="shortcut icon" href="./img/logo__little.png" type="image/png" />
-    <title> Кафе Caprese</title>
+    <link rel="shortcut icon" href="./img/logo__little.png" type="image/png" />    
+    <meta property = "og:title" content = "Кафе-бар в Колодищах. Пицца, обеды с доставкой. Организация праздничных мероприятий ">
+    <meta property = "og:type" content = "article">
+    <meta property = "og:image" content = "./img/logo.png">
+    <meta property = "og:description" content = "Кафе-бар Капрезе в Колодищах. Пицца, обеды с доставкой. Организация праздничных мероприятий">
+    <title>Кафе Caprese</title>
   </head>
   <body>
     <!-- ! ............... MAIN ...................... -->
@@ -22,6 +26,7 @@
         <img class="main__logo" src="./img/logo.png" alt="Caprese" />
       </div>
     </div>
+    
     <!-- ! ............... NAVIGATION ................ -->
     <section class="nav">
       <div class="container">
@@ -48,10 +53,9 @@
           </li>
         </nav>
         <h1 class="nav--delivery delivery">
-          <a class="delivery__link" href="tel:+375291371010"
-            ><span class="delivery__link--caption">Оформить доставку</span>+375
-            (29) 137 10 10</a
-          >
+          <a class="delivery__link" href="tel:+375291371010">
+            <ruby> +375 (29) 137 10 10 <rt>Оформить&ensp;доставку</rt></ruby>
+            </a>
         </h1>
       </div>
     </section>
@@ -1407,34 +1411,36 @@
         </div>      
       </div>
       </div>
+      <!-- ? ............. Garnir ................... -->
+      <!-- <div class="garnir">                            
+        <div class="garnir__wrapper">
+          <h2 class="kitchen__wrapper--title">Гарниры</h2>
+        <div class="kitchen__wrapper--item item">
+          <div class="item__text">
+            <h3 class="item__text__name">Картофель фри</h3>
+          </div>
+          <span class="item__gramm">150  </span>
+          <span class="item__cost">5,5  </span>
+        </div>
+        <div class="kitchen__wrapper--item item">
+          <div class="item__text">
+            <h3 class="item__text__name">Картофель по-деревенски</h3>
+          </div>
+          <span class="item__gramm">150  </span>
+          <span class="item__cost">5,50  </span>
+        </div>
+        <div class="kitchen__wrapper--item item">
+          <div class="item__text">
+            <h3 class="item__text__name">Овощи гриль</h3>
+          </div>
+          <span class="item__gramm">90  </span>
+          <span class="item__cost">6,00  </span>
+        </div>
+        </div>          
+      </div> -->
       <!-- ? ............ ДЕСЕРТЫ .................... -->
       <div class="container">
-        <div class="kitchen__wrapper">                    
-          <h2 class="kitchen__wrapper--title">Гарниры</h2>
-          <div class="kitchen__wrapper--item item">
-            <div class="item__text">
-              <h3 class="item__text__name">Драники со сметаной</h3>
-              <p class="item__text--info">Картофельные оладьи, сметана, зелень</p>
-            </div>
-            <span class="item__gramm">390  </span>
-            <span class="item__cost">8,5  </span>
-          </div>
-          <div class="kitchen__wrapper--item item">
-            <div class="item__text">
-              <h3 class="item__text__name">Драники с птицей и чесночным соусом</h3>
-              <p class="item__text--info">Картофельные оладьи, филе куриное, чесночный соус, зелень</p>
-            </div>
-            <span class="item__gramm">380  </span>
-            <span class="item__cost">3,20  </span>
-          </div>
-          <div class="kitchen__wrapper--item item">
-            <div class="item__text">
-              <h3 class="item__text__name">Драники по-домашнему</h3>
-              <p class="item__text--info">Картофельные оладьи, филе куриное, ветчина, грудинка, шампиньоны, лук, сливки, сметана</p>
-            </div>
-            <span class="item__gramm">460  </span>
-            <span class="item__cost">16,00  </span>
-          </div>          
+        <div class="kitchen__wrapper">
           <h2 class="kitchen__wrapper--title">Десерты</h2>
           <div class="kitchen__wrapper--item item">
             <div class="item__text">
