fixed finish version

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta property = "og:description" content = "Кафе-бар Капрезе в Колодищах. Пицца, обеды с доставкой. Организация праздничных мероприятий">
     <title>Кафе Caprese</title>
   </head>
-  <body>
+  <body style="display: none;">
     <!-- ! ............... MAIN ...................... -->
     <div class="main">
       <div class="container">        
@@ -66,7 +66,7 @@
         <div class="category pizza__category">
           <hr class="category__line" />
           <h1 class="category__title">
-            <i class="fa-solid fa-pizza-slice"></i>Pizza</h1>
+            <i class="fa-solid fa-pizza-slice"></i>Пицца</h1>
           <hr class="category__line" />
         </div>
         <div class="pizza__box box">
@@ -781,7 +781,7 @@
           <div class="category">
             <hr class="category__line" />
             <h1 class="category__title">
-              <i class="fa-solid fa-burger"></i> Burger</h1>
+              <i class="fa-solid fa-burger"></i> Бургер</h1>
             <hr class="category__line" />
           </div>
           <div class="lanch__wrapper--item item">
@@ -953,12 +953,10 @@
     </footer>
     <!-- ? ............... MODAL ............... -->
     <div class="modal">
-      <div class="modal__dialog">
         <div class="modal__content">
           <div data-close class="modal__close">&times;</div>            
           <img src="./promo.png" alt="promo">
         </div>
-      </div>
     </div>
     <script src="./js/scirpts.js"></script>    
   </body>
