--- a/pages/delivery.html
+++ b/pages/delivery.html
@@ -28,7 +28,7 @@
     />
     <title>Доставка</title>
   </head>
-  <body>
+  <body style="display: none;">
     <!-- ! ............... MAIN ...................... -->
     <div class="main">
       <div class="container">
