--- a/pages/lunch.html
+++ b/pages/lunch.html
@@ -28,7 +28,7 @@
     />
     <title>Обеденное меню</title>
   </head>
-  <body>
+  <body style="display: none;">
     <!-- ! ............... MAIN ...................... -->
     <div class="main">
       <div class="container">
@@ -79,7 +79,7 @@
         <div class="category lunch__category" id="lunch">
           <hr class="category__line" />
           <h1 class="category__title">
-            <i class="fa-solid fa-bell-concierge"></i>Lunch</h1>
+            <i class="fa-solid fa-bell-concierge"></i>Обед</h1>
           <span class="lunch__category--caption">с 12:00 до 16:00</span>
           <hr class="category__line" />
         </div>
